--- a/MFD_PC_MELIN.ipynb
+++ b/MFD_PC_MELIN.ipynb
@@ -31,6 +31,7 @@
         "\n",
         "\n",
         "\n",
+        "\n",
         "First, generate two images displaced, rotated and scaled from one another.\n"
       ]
     },
@@ -286,7 +287,7 @@
         "id": "OE1obhjRyG0Q"
       },
       "source": [
-        "Next, convert the fft of both images from a cartesian cordinates to log-polar coordinates. A funtion aveilable in the library  imreg was used for this convesion because only the upper two quadrants of the Fourier log-magnitude spectra of images are used to map them to polar plane in the method proposed for Reddy and Chatterji(1996). An standard cartesian to log-polar conversion colud not be used because all of then uses the Fourier log-magnitude spectra of images."
+        "Next, convert the fft of both images from a cartesian cordinates to log-polar coordinates. A funtion aveilable in the library [imreg](https://pypi.org/project/imreg/) was used for this convesion because only the upper two quadrants of the Fourier log-magnitude spectra of images are used to map them to polar plane in the method proposed for Reddy and Chatterji(1996). An standard cartesian to log-polar conversion colud not be used because all of then uses the Fourier log-magnitude spectra of images."
       ]
     },
     {
